# Engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Engine.sln  README.md  cmake-emscripten.sh  cmake-make.sh  cmake-xcode.sh  configure.sh  game.js.mem  index.html
CMakeModules/: FindASSIMP.cmake  FindFFMPEG.cmake  FindSOIL.cmake
Engine/: .gitignore  Camera.cpp  Camera.h  Engine.vcxproj  Engine.vcxproj.filters  GLEWManager.cpp  GLManager.cpp  GLManager.h  GameManager.cpp  GameManager.h  KeyboardHandler.cpp  Makefile  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelAsset.cpp  ModelAsset.h  ModelInstance.cpp  ModelInstance.h  SDLManager.cpp  SDLManager.h  Shader.cpp  Shader.h  Texture.cpp  Vertex.h  main.cpp  shader1.frag  shader1.vert  shader2.frag
android/: AndroidManifest.xml
android/jni/: Android.mk  Application.mk  SDL
android/jni/src/: Android.mk
android/src/org/libsdl/app/: SDLActivity.java
assets/: AncientUgandan.mtl  Pregnant.mtl  Pregnant_D.tga  Pregnant_N.tga  Pregnant_S.tga  forward-ambient-gles.fs  forward-ambient-gles.vs  forward-ambient.fs  forward-directional-gles.fs  forward-directional.fs  forward-point-gles.fs  forward-spot-gles.vs  monkey3.mtl  shader0.fs  shader0.vs  shader1.vs  source.txt
assets/shaders/: forward-ambient-gles.fs  forward-ambient.fs  forward-ambient.vs  forward-directional-gles.fs  forward-directional-gles.vs  forward-directional.fs  forward-directional.vs  forward-point-gles.fs  forward-point-gles.vs  forward-point.fs  forward-spot-gles.fs  forward-spot.fs  forward-spot.vs  gui.vs  shader1.vs  simple-gles.vs  simple.fs  simple.vs
bin-emscripten/: index.html
cmake/: android.cmake  cotire.cmake  macros.cmake
dependencies/: CMakeLists.txt
scripts/: cmake-android.sh  cmake-emscripten.sh  cmake-make.sh  cmake-xcode.sh  travis-build.sh
src/: AABB.cpp  AABB.h  Android.mk  AndroidAssetManager.cpp  AndroidAssetManager.h  AnimationManager.cpp  AnimationManager.h  Asset.cpp  Asset.h  Attenuation.cpp  Attenuation.h  BaseLight.cpp  BaseLight.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  CustomIOStream.cpp  CustomIOStream.h  CustomIOSystem.cpp  CustomIOSystem.h  DebugComponent.cpp  DebugComponent.h  DirectionalLight.cpp  DirectionalLight.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityComponent.cpp  EntityComponent.h  FreeLook.cpp  FreeLook.h  FreeMove.cpp  FreeMove.h  GLEWManager.cpp  GLEWManager.h  GLManager.cpp  GLManager.h  (+64 more)
src/components/: Animation.cpp  Animation.h  BaseLight.cpp  BaseLight.h  Camera.cpp  Camera.h  DebugComponent.h  DirectionalLight.cpp  DirectionalLight.h  FreeLook.cpp  FreeLook.h  FreeMove.cpp  FreeMove.h  MeshRenderer.cpp  MeshRenderer.h  PointLight.cpp  PointLight.h  Sphere.cpp  Sphere.h  SpotLight.cpp  SpotLight.h  VideoAnimation.cpp  VideoAnimation.h
src/engine/: AndroidAssetManager.h  Asset.cpp  Asset.h  Attenuation.cpp  Attenuation.h  CMakeLists.txt  Component.cpp  Component.h  CustomIOStream.h  CustomIOSystem.cpp  CustomIOSystem.h  Engine.cpp  Engine.h  EngineIOStream.cpp  EngineIOStream.h  Entity.cpp  Entity.h  EntityComponent.cpp  EntityComponent.h  ForwardRenderer.cpp  ForwardRenderer.h  GLEWManager.h  GLManager.cpp  GLManager.h  Game.cpp  Game.h  GuiManager.cpp  GuiManager.h  Input.cpp  Input.h  Line.cpp  Line.h  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  MeshLoader.cpp  (+30 more)
src/engine/components/: BaseCollider.cpp  BaseCollider.h  BaseLight.cpp  BaseLight.h  BoxCollider.cpp  BoxCollider.h  BulletPhyObj.cpp  BulletPhyObj.h  Camera.cpp  Camera.h  CapsuleCollider.cpp  CapsuleCollider.h  DirectionalLight.cpp  DirectionalLight.h  FreeLook.cpp  FreeLook.h  FreeMove.cpp  FreeMove.h  MeshRenderer.cpp  MeshRenderer.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PointLight.cpp  PointLight.h  Sphere.cpp  Sphere.h  SphereCollider.cpp  SphereCollider.h  SpotLight.cpp  SpotLight.h
src/example/: CMakeLists.txt  main.cpp
src/example/android-project/: AndroidManifest.xml
src/example/android-project/res/values/: strings.xml
src/example/android-project/src/org/libsdl/app/: SDLActivity.java
src/example/assets/: Pregnant.mtl  astroBoy_walk_Maya.dae  bestMotionCaptureROM.dae  best_BCN_Epileptic.obj.mtl  house.mtl  iron_grill.tga  license.txt  regr01.mtl
src/example/assets/shaders/: forward-ambient-gles.vs  forward-ambient.vs  forward-directional.fs  forward-directional.vs  forward-spot.fs  gui-gles.fs  gui-gles.vs  gui.fs  simple-gles.fs
src/example/html/: index.html
test/: configure.sh
